name:           chat
version:        1.0.0
synopsis:       Stanford CS240h Lab 2.
build-type:     Simple
cabal-version:  >= 1.8

extra-source-files:
  README.md

library
  exposed-modules:
    Chat
  build-depends:
    base < 5,
    text,
    bytestring,
    network,
    stm,
    unix,
    async
  ghc-options: -Wall

executable chat
  main-is: Server.hs
  build-depends:
    base < 5,
    text,
    bytestring,
    network,
    stm,
    unix,
    async
  ghc-options: -Wall

test-suite test-chat
  type: exitcode-stdio-1.0
  main-is: TestChat.hs
  build-depends:
    base < 5,
    chat,
    text,
    bytestring,
    network,
    stm,
    QuickCheck > 2.5,
    hspec,
    unix,
    async
  ghc-options: -Wall

